Zmiana nazw zmienny oraz konfiguracja nowych endopointów aby działały poprawnie
