# backend/src/main/java/org/umcs/appollo/controllers/UserController.java
@@ -1,7 +1,6 @@
 package org.umcs.appollo.controllers;
-
-import io.swagger.v3.oas.annotations.parameters.RequestBody;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -10,8 +9,10 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ResponseStatusException;
 import org.umcs.appollo.api.UsersApi;
 import org.umcs.appollo.configuration.TokenProvider;
+import org.umcs.appollo.model.api.AuthToken;
 import org.umcs.appollo.model.api.User;
 import org.umcs.appollo.model.api.UserLoginAttempt;
 import org.umcs.appollo.services.UserService;
@@ -37,7 +38,7 @@ public class UserController implements UsersApi {
 
 
     @Override
-    public ResponseEntity<String> loginUser(UserLoginAttempt userLoginAttempt) throws AuthenticationException {
+    public ResponseEntity<AuthToken> loginUser(UserLoginAttempt userLoginAttempt) throws AuthenticationException {
         final Authentication authentication = authenticationManager.authenticate(
                 new UsernamePasswordAuthenticationToken(
                         userLoginAttempt.getUsername(),
@@ -45,29 +46,56 @@ public class UserController implements UsersApi {
                 )
         );
         SecurityContextHolder.getContext().setAuthentication(authentication);
-        final String token = jwtTokenUtil.generateToken(authentication);
+        AuthToken token = new AuthToken();
+        token.setValue(jwtTokenUtil.generateToken(authentication));
         return ResponseEntity.ok(token);
     }
 
     @Override
-   // @PreAuthorize("hasRole('USER')")
-    public ResponseEntity<User> createUser(@RequestBody User user) {
-        return UsersApi.super.createUser(user);
+    public ResponseEntity<User> createUser(User user) {
+        User result ;
+        try {
+            result = userService.addNewUser(user);
+        }
+        catch (ResponseStatusException e){
+            throw new RuntimeException(e.getMessage());
+        }
+
+       return ResponseEntity.ok(result);
     }
 
     @Override
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<Void> deleteUserById(Integer id) {
-        return UsersApi.super.deleteUserById(id);
+        try {
+            userService.delete(id);
+        }
+        catch (ResponseStatusException e){
+            throw new RuntimeException(e.getMessage());
+        }
+        return ResponseEntity.noContent().build();
     }
 
     @Override
     public ResponseEntity<User> editUserById(Integer id, User user) {
-        return UsersApi.super.editUserById(id, user);
+        User editedUser;
+        try {
+             editedUser = userService.edit(id, user);
+        } catch(ResponseStatusException ex) {
+            throw new RuntimeException(ex.getMessage());
+        }
+        return ResponseEntity.ok().body(editedUser);
     }
 
     @Override
     public ResponseEntity<User> getUserById(Integer id) {
-        return UsersApi.super.getUserById(id);
+        User user;
+        try{
+            user = userService.findOne(id);
+        }catch(ResponseStatusException ex){
+            throw new RuntimeException(ex.getMessage());
+        }
+        return ResponseEntity.ok().body(user);
     }
 
 
